Remove use of setAccessible from jar/jmod tests